--- a/blog.html
+++ b/blog.html
@@ -6,9 +6,9 @@ title: Blog
 
 <ul>
   {% for post in site.posts %}
-    <li>
-      <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
+    <div class='card'>
+        <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
       {{ post.excerpt }}
-    </li>
+    </div>
   {% endfor %}
 </ul>
